restore jwt as well
